--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             <div class="info-box">
 
                 <div class="text">
-                    <h3>Hi👋🏾, I'm</h3>
-                    <h1>Dan Senga🙂</h1>
+                    <h3>Hi, I'm</h3>
+                    <h1>Dan Senga</h1>
                     <span>Frontend Developer</span>
                 </div>
 
